--- a/app/src/main/res/values/config.xml
+++ b/app/src/main/res/values/config.xml
@@ -3,7 +3,12 @@
 
     <!-- SystemUI Services: The classes of the stuff to start. -->
     <string-array name="config_systemUIServiceComponents" translatable="false">
-        <item>com.litekite.systemui.SystemBars</item>
+        <item>com.litekite.systemui.process.SystemBars</item>
     </string-array>
+
+    <!-- Component to be used as the status bar service.  Must implement the IStatusBar
+     interface.  This name is in the ComponentName flattened format (package/class)  -->
+    <string name="config_statusBarComponent" translatable="false">
+        com.litekite.systemui.statusbar.StatusBar</string>
 
 </resources>
