--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -11,4 +11,8 @@
         <attr name="android:contentDescription" />
     </declare-styleable>
 
+    <declare-styleable name="Clock">
+        <attr name="showSeconds" format="boolean" />
+    </declare-styleable>
+
 </resources>
