--- a/app/src/main/res/values/config.xml
+++ b/app/src/main/res/values/config.xml
@@ -18,13 +18,14 @@
 
     <!-- SystemUI Services: The classes of the stuff to start. -->
     <string-array name="config_systemUIServiceComponents" translatable="false">
-        <item>com.litekite.systemui.component.Dependency</item>
-        <item>com.litekite.systemui.component.SystemBars</item>
+        <item>com.litekite.systemui.dependency.Dependency</item>
+        <item>com.litekite.systemui.systembar.base.SystemBars</item>
+        <item>com.litekite.systemui.power.Power</item>
     </string-array>
 
     <!-- Component to be used as the status bar service.  Must implement the IStatusBar
      interface.  This name is in the ComponentName flattened format (package/class)  -->
     <string name="config_statusBarComponent" translatable="false">
-        com.litekite.systemui.statusbar.StatusBar</string>
+        com.litekite.systemui.systembar.statusbar.StatusBar</string>
 
 </resources>
