--- a/app/src/main/res/layout/widget_status_bar_container_icon.xml
+++ b/app/src/main/res/layout/widget_status_bar_container_icon.xml
@@ -14,12 +14,11 @@
    See the License for the specific language governing permissions and
    limitations under the License.
 -->
-<resources>
-
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
-    <color name="white">#FFFFFF</color>
-    <color name="red">#F44336</color>
-
-</resources>
+<androidx.appcompat.widget.AppCompatImageView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="@dimen/status_bar_container_icon_width"
+    android:layout_height="@dimen/status_bar_container_icon_height"
+    android:layout_gravity="center"
+    android:layout_marginEnd="@dimen/status_bar_container_icon_margin_end"
+    android:scaleType="centerInside"
+    tools:src="@drawable/ic_wifi_disabled" />
