--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -16,10 +16,9 @@
 -->
 <resources>
 
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
-    <color name="white">#FFFFFF</color>
-    <color name="red">#F44336</color>
+    <!--Status Bar Container Icon IDs-->
+    <item type="id" name="iv_bt_icon" />
+    <item type="id" name="iv_battery_icon" />
+    <item type="id" name="iv_signal_icon" />
 
 </resources>
