--- a/app/src/main/res/drawable/ic_battery_4.xml
+++ b/app/src/main/res/drawable/ic_battery_4.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
    Copyright 2020 LiteKite Startup. All rights reserved.
 
@@ -14,13 +13,13 @@
    See the License for the specific language governing permissions and
    limitations under the License.
 -->
-<resources>
-
-    <!--Status Bar Container Icon IDs-->
-    <item type="id" name="iv_wifi_icon" />
-    <item type="id" name="iv_bt_icon" />
-    <item type="id" name="iv_signal_icon" />
-    <item type="id" name="iv_roaming_icon" />
-    <item type="id" name="iv_battery_icon" />
-
-</resources>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="@dimen/status_bar_container_icon_width"
+    android:height="@dimen/status_bar_container_icon_height"
+    android:autoMirrored="true"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <path
+        android:fillColor="@color/white"
+        android:pathData="M16,9H8V6H16M16.67,4H15V2H9V4H7.33A1.33,1.33 0,0 0,6 5.33V20.67C6,21.4 6.6,22 7.33,22H16.67A1.33,1.33 0,0 0,18 20.67V5.33C18,4.6 17.4,4 16.67,4Z" />
+</vector>
