--- a/app/src/main/res/layout/status_bar.xml
+++ b/app/src/main/res/layout/status_bar.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
    Copyright 2020 LiteKite Startup. All rights reserved.
 
    Licensed under the Apache License, Version 2.0 (the "License");
@@ -49,16 +48,10 @@
     <com.litekite.systemui.systembar.statusbar.StatusBarIconContainer
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:paddingStart="0dp"
+        android:paddingEnd="@dimen/status_bar_container_padding_end"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="@dimen/status_bar_container_margin_end"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <!--Inflating Wifi Icon here statically, because it will be visible always-->
-        <include
-            android:id="@+id/iv_wifi_icon"
-            layout="@layout/widget_status_bar_container_icon" />
-
-    </com.litekite.systemui.systembar.statusbar.StatusBarIconContainer>
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
