--- a/app/src/main/res/values/config.xml
+++ b/app/src/main/res/values/config.xml
@@ -36,12 +36,33 @@
         <item>@id/iv_battery_icon</item>
     </integer-array>
 
+    <!--StatusBar Container: Status Bar Wifi Icons-->
     <integer-array name="config_status_bar_wifi_icons">
         <item>@drawable/ic_wifi_0</item>
         <item>@drawable/ic_wifi_1</item>
         <item>@drawable/ic_wifi_2</item>
         <item>@drawable/ic_wifi_3</item>
         <item>@drawable/ic_wifi_4</item>
+    </integer-array>
+
+    <!--StatusBar Container: Status Bar Battery Icons-->
+    <integer-array name="config_status_bar_battery_icons">
+        <item>@drawable/ic_battery_0</item>
+        <item>@drawable/ic_battery_1</item>
+        <item>@drawable/ic_battery_2</item>
+        <item>@drawable/ic_battery_3</item>
+        <item>@drawable/ic_battery_4</item>
+        <item>@drawable/ic_battery_5</item>
+    </integer-array>
+
+    <!--StatusBar Container: Status Bar Signal Icons-->
+    <integer-array name="config_status_bar_signal_icons">
+        <item>@drawable/ic_signal_0</item>
+        <item>@drawable/ic_signal_1</item>
+        <item>@drawable/ic_signal_2</item>
+        <item>@drawable/ic_signal_3</item>
+        <item>@drawable/ic_signal_4</item>
+        <item>@drawable/ic_signal_5</item>
     </integer-array>
 
 </resources>
