Added circle image button from widgets library

--- a/app/src/main/res/layout/super_bottom_nav_bar.xml
+++ b/app/src/main/res/layout/super_bottom_nav_bar.xml
@@ -18,4 +18,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include layout="@layout/bottom_nav_bar" />
+
 </FrameLayout>
