--- a/app/src/main/res/layout/status_bar.xml
+++ b/app/src/main/res/layout/status_bar.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
    Copyright 2020 LiteKite Startup. All rights reserved.
 
    Licensed under the Apache License, Version 2.0 (the "License");
@@ -18,16 +19,15 @@
     android:id="@+id/status_bar_container"
     android:layout_width="match_parent"
     android:layout_height="@dimen/status_bar_height"
-    android:background="@android:color/black"
-    android:orientation="vertical">
+    android:background="@color/black">
 
     <com.litekite.systemui.widget.KeyButtonView
         android:id="@+id/back"
         style="@style/KeyButtonView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:paddingStart="@dimen/back_key_button_padding_start"
-        android:paddingEnd="@dimen/back_key_button_padding_end"
+        android:paddingStart="@dimen/back_key_btn_padding_start"
+        android:paddingEnd="@dimen/back_key_btn_padding_end"
         android:src="@drawable/ic_back"
         app:keyCode="4"
         app:layout_constraintBottom_toBottomOf="parent"
