--- a/app/src/main/res/drawable/ic_home.xml
+++ b/app/src/main/res/drawable/ic_home.xml
@@ -15,12 +15,12 @@
    limitations under the License.
 -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="@dimen/status_bar_container_icon_width"
-    android:height="@dimen/status_bar_container_icon_height"
-    android:autoMirrored="true"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:width="@dimen/bottom_nav_bar_container_icon_width"
+    android:height="@dimen/bottom_nav_bar_container_icon_height"
+    android:viewportWidth="44"
+    android:viewportHeight="44">
     <path
-        android:fillColor="@color/white"
-        android:pathData="M16.67,4H15V2H9V4H7.33A1.33,1.33 0,0 0,6 5.33V20.67C6,21.4 6.6,22 7.33,22H16.67A1.33,1.33 0,0 0,18 20.67V5.33C18,4.6 17.4,4 16.67,4Z" />
+        android:pathData="M36.92857 22.39286A14.53571 14.53571 0 0 1 7.857143 22.39286A14.53571 14.53571 0 0 1 36.92857 22.39286Z"
+        android:strokeWidth="3"
+        android:strokeColor="@color/white" />
 </vector>
