--- a/app/src/main/res/drawable/ic_phone.xml
+++ b/app/src/main/res/drawable/ic_phone.xml
@@ -15,28 +15,11 @@
    limitations under the License.
 -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="@dimen/status_bar_container_icon_width"
-    android:height="@dimen/status_bar_container_icon_height"
-    android:autoMirrored="true"
-    android:viewportWidth="18"
-    android:viewportHeight="24">
+    android:width="@dimen/bottom_nav_bar_container_icon_width"
+    android:height="@dimen/bottom_nav_bar_container_icon_height"
+    android:viewportWidth="44"
+    android:viewportHeight="44">
     <path
         android:fillColor="@color/white"
-        android:pathData="M0,19h2v2h-2z" />
-    <path
-        android:fillAlpha="100"
-        android:fillColor="@color/white"
-        android:pathData="M4,15h2v6h-2z" />
-    <path
-        android:fillAlpha="100"
-        android:fillColor="@color/white"
-        android:pathData="M8,11h2v10h-2z" />
-    <path
-        android:fillAlpha="100"
-        android:fillColor="@color/white"
-        android:pathData="M12,7h2v14h-2z" />
-    <path
-        android:fillAlpha="100"
-        android:fillColor="@color/white"
-        android:pathData="M16,3h2v18h-2z" />
+        android:pathData="M12.1366667 19.7816667C14.7766667 24.97 19.03 29.205 24.2183333 31.8633333L28.2516667 27.83C28.7466667 27.335 29.48 27.17 30.1216667 27.39C32.175 28.0683333 34.3933333 28.435 36.6666667 28.435C37.675 28.435 38.5 29.26 38.5 30.2683333L38.5 36.6666667C38.5 37.675 37.675 38.5 36.6666667 38.5C19.4516667 38.5 5.5 24.5483333 5.5 7.33333333C5.5 6.325 6.325 5.5 7.33333333 5.5L13.75 5.5C14.7583333 5.5 15.5833333 6.325 15.5833333 7.33333333C15.5833333 9.625 15.95 11.825 16.6283333 13.8783333C16.83 14.52 16.6833333 15.235 16.17 15.7483333L12.1366667 19.7816667Z" />
 </vector>
