--- a/app/src/main/res/layout/status_bar.xml
+++ b/app/src/main/res/layout/status_bar.xml
@@ -29,7 +29,7 @@
         android:paddingStart="@dimen/back_key_btn_padding_start"
         android:paddingEnd="@dimen/back_key_btn_padding_end"
         android:src="@drawable/ic_back"
-        app:keyCode="4"
+        app:keyCode="@integer/keycode_back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
