--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -16,9 +16,10 @@
 -->
 <resources>
 
-    <color name="white">#FFFFFF</color>
-    <color name="black">#000000</color>
-    <color name="red">#F44336</color>
-    <color name="blue">#0080FF</color>
+    <!--Home Keycode KeyEvent-->
+    <integer name="keycode_home">3</integer>
+
+    <!--Back Keycode KeyEvent-->
+    <integer name="keycode_back">4</integer>
 
 </resources>
