--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,7 +22,7 @@
         <item name="isLightTheme">false</item>
     </style>
 
-    <style name="KeyButtonView">
+    <style name="KeyButtonView" parent="Widget.AppCompat.ImageButton">
         <item name="android:clickable">true</item>
         <item name="android:focusable">true</item>
         <item name="android:scaleType">centerInside</item>
@@ -34,8 +34,9 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
-    <style name="BottomNavBarButtonStyle">
+    <style name="BottomNavBarBtnStyle" parent="Widget.AppCompat.ImageButton">
         <item name="android:tint">@color/selector_tint_color</item>
+        <item name="android:background">@drawable/bg_ripple_round_48</item>
     </style>
 
 </resources>
