Added launch events for system bar buttons and updated activity task stack listeners

--- a/app/src/main/res/layout/status_bar.xml
+++ b/app/src/main/res/layout/status_bar.xml
@@ -22,7 +22,7 @@
     android:background="@color/black">
 
     <com.litekite.systemui.widget.KeyButtonView
-        android:id="@+id/back"
+        android:id="@+id/kbv_back"
         style="@style/KeyButtonView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
