--- a/app/src/main/res/layout/bottom_nav_bar.xml
+++ b/app/src/main/res/layout/bottom_nav_bar.xml
@@ -24,7 +24,7 @@
     android:background="@color/black">
 
     <com.litekite.systemui.widget.KeyButtonView
-        android:id="@+id/home"
+        android:id="@+id/kbv_home"
         style="@style/KeyButtonView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -32,36 +32,40 @@
         android:tint="@color/selector_tint_color"
         app:keyCode="@integer/keycode_home"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/ib_power"
+        app:layout_constraintEnd_toStartOf="@+id/power"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_home" />
 
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/ib_power"
-        style="@style/BottomNavBarBtnStyle"
+    <com.litekite.systemui.widget.KeyButtonView
+        android:id="@+id/power"
+        style="@style/KeyButtonView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/bg_ripple_round_48"
         android:tint="@null"
+        app:keyCode="@integer/keycode_power"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/ib_music"
+        app:layout_constraintEnd_toStartOf="@+id/abv_music"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/home"
+        app:layout_constraintStart_toEndOf="@+id/kbv_home"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_power" />
 
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/ib_music"
+    <com.litekite.systemui.widget.AppButtonView
+        android:id="@+id/abv_music"
         style="@style/BottomNavBarBtnStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:action="@string/action_music"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/cib_user_avatar"
         app:layout_constraintEnd_toStartOf="@+id/cib_user_avatar"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/ib_power"
+        app:layout_constraintStart_toEndOf="@+id/power"
         app:layout_constraintTop_toTopOf="parent"
+        app:pkg="@string/pkg_music"
         app:srcCompat="@drawable/ic_music" />
 
     <com.litekite.widgets.CircleImageButton
@@ -76,40 +80,43 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@drawable/ic_preview_user_avatar" />
 
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/ib_phone"
+    <com.litekite.systemui.widget.AppButtonView
+        android:id="@+id/abv_phone"
         style="@style/BottomNavBarBtnStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/ib_apps"
+        app:layout_constraintEnd_toStartOf="@+id/abv_apps_drawer"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/cib_user_avatar"
         app:layout_constraintTop_toTopOf="parent"
+        app:pkg="@string/pkg_dialer"
         app:srcCompat="@drawable/ic_phone" />
 
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/ib_apps"
+    <com.litekite.systemui.widget.AppButtonView
+        android:id="@+id/abv_apps_drawer"
         style="@style/BottomNavBarBtnStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:component="@string/component_apps_drawer"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/ib_settings"
+        app:layout_constraintEnd_toStartOf="@+id/abv_settings"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/ib_phone"
+        app:layout_constraintStart_toEndOf="@+id/abv_phone"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_apps" />
 
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/ib_settings"
+    <com.litekite.systemui.widget.AppButtonView
+        android:id="@+id/abv_settings"
         style="@style/BottomNavBarBtnStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/ib_apps"
+        app:layout_constraintStart_toEndOf="@+id/abv_apps_drawer"
         app:layout_constraintTop_toTopOf="parent"
+        app:pkg="@string/pkg_settings"
         app:srcCompat="@drawable/ic_settings" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
