--- a/app/src/main/res/layout/bottom_nav_bar.xml
+++ b/app/src/main/res/layout/bottom_nav_bar.xml
@@ -31,6 +31,7 @@
         android:background="@drawable/bg_ripple_round_48"
         android:tint="@color/selector_tint_color"
         app:keyCode="@integer/keycode_home"
+        app:keyRepeat="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/power"
         app:layout_constraintHorizontal_bias="0.5"
