--- a/app/src/main/res/layout/bottom_nav_bar.xml
+++ b/app/src/main/res/layout/bottom_nav_bar.xml
@@ -69,7 +69,7 @@
         app:pkg="@string/pkg_music"
         app:srcCompat="@drawable/ic_music" />
 
-    <com.litekite.widgets.CircleImageButton
+    <com.litekite.widget.CircleImageButton
         android:id="@+id/cib_user_avatar"
         style="@style/Widget.AppCompat.ImageButton"
         android:layout_width="@dimen/user_avatar_img_btn_width"
