--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -49,6 +49,9 @@
     <dimen name="bottom_nav_bar_container_icon_width">72dp</dimen>
     <dimen name="bottom_nav_bar_container_icon_height">72dp</dimen>
 
+    <!--Volume Bar-->
+    <dimen name="volume_bar_expanded_height">300dp</dimen>
+
     <!--Ripple Backgrounds-->
     <dimen name="bg_ripple_round_34">34dp</dimen>
     <dimen name="bg_ripple_round_48">48dp</dimen>
